--- a/veterinaria/app/templates/servicios.html
+++ b/veterinaria/app/templates/servicios.html
@@ -16,7 +16,7 @@
         <div class="row g-4">
             <!-- Columna izquierda: Formulario crear/editar -->
             <div class="col-12 col-lg-4">
-                <div class="card">
+                <div class="card glass-card">
                     <div class="card-body p-4">
                         <h5 class="card-title mb-3">
                             {% if editando %}Editar servicio{% else %}Crear servicio{% endif %}
@@ -102,7 +102,7 @@
 
             <!-- Columna derecha: Buscador + Lista -->
             <div class="col-12 col-lg-8">
-                <div class="card">
+                <div class="card glass-card">
                     <div class="card-body p-4">
                         <div class="d-flex justify-content-between align-items-center mb-3">
                             <h4 class="m-0 card-title">Lista de Servicios</h4>
