--- a/veterinaria/app/templates/servicios.html
+++ b/veterinaria/app/templates/servicios.html
@@ -42,7 +42,7 @@
                             <div class="mb-3">
                                 <label class="form-label">Descripción</label>
                                 <textarea name="descripcion" rows="4" class="form-control"
-                                    maxlength="250">{{ servicio.descripcion }}</textarea>
+                                    maxlength="250" required>{{ servicio.descripcion }}</textarea>
                             </div>
 
                             <div class="d-flex gap-2 justify-content-center mt-4">
