--- a/veterinaria/app/templates/servicios.html
+++ b/veterinaria/app/templates/servicios.html
@@ -108,9 +108,9 @@
                         <div class="d-flex justify-content-between align-items-center mb-3">
                             <h4 class="m-0 card-title mb-3">Lista de Servicios</h4>
                             <form class="d-flex" method="get" action="{% url 'servicios' %}">
-                                <input class="form-control me-2" type="search" placeholder="Buscar…" name="q"
+                                <input class="form-control me-2" type="search" placeholder="Buscar" name="q"
                                     value="{{ q }}">
-                                <button class="btn btn-outline-primary" type="submit">Buscar</button>
+                                <button class="btn btn-outline-primary" type="submit"><i class="bi bi-search"></i></button>
                             </form>
                         </div>
 
