--- a/veterinaria/app/static/css/style.css
+++ b/veterinaria/app/static/css/style.css
@@ -480,7 +480,6 @@ html {
   color: #404040;
   font-weight: bold;
   display: inline-block;
-  padding: 3rem;
   padding-bottom: 0.5rem;
   margin-bottom: 1.5rem;
   border-bottom: 3px solid #F47F76;
@@ -645,7 +644,6 @@ html {
 .testimonios h3 {
   color: #404040;
   text-transform: uppercase;
-  padding: 3rem;
   border-bottom: 3px solid #F47F76;
   display: inline-block;
   padding-bottom: 0.4rem;
@@ -837,7 +835,6 @@ html {
   color: #404040;
   font-weight: bold;
   display: inline-block;
-  padding: 3rem;
   padding-bottom: .5rem;
   margin-bottom: 1.5rem;
   border-bottom: 4px solid #F47F76;
@@ -1167,14 +1164,16 @@ textarea.textarea:-webkit-autofill {
   color: #404040;
   font-weight: bold;
   display: inline-block;
-  padding: 3rem;
   padding-bottom: 0.5rem;
   margin-bottom: 1.5rem;
   border-bottom: 3px solid #F47F76;
 }
 
 .faq-card {
-  transition: 1s ease;
+  transition: .2s ease;
+  border: 2px solid #056272; 
+  border-radius:12px;
+
 }
 
 .faq-card:hover {
