--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -482,14 +482,10 @@
                         </div>
                         <div class="faq2">
                             <input id="q2" type="checkbox" class="faq2__toggle ">
-                            <label for="q2" class="faq2__summary h6 fw-semibold">¿Puedo editar una cita que ya
-                                agendé?</label>
+                            <label for="q2" class="faq2__summary h6 fw-semibold">¿Puedo cancelar mi cita?</label>
                             <div class="faq2__content">
-                                <p class="small text-muted p-2 mb-0">¡Claro! Puedes editar tu cita desde nuestro
-                                    <i>Sitio
-                                        web&gt; Citas&gt; Editar Cita</i> o contactándonos directamente &#40;con 24
-                                    horas de
-                                    anticipación&#41;.</p>
+                                <p class="small text-muted p-2 mb-0">¡Claro! Puedes cancelar tu cita desde nuestro sitio web,
+                                     sólo contáctate con nosotros, dentro de la sección contáctanos, deja tus datos y deja tu mensaje.</p>
                             </div>
                         </div>
                     </div>
