--- a/veterinaria/app/templates/servicios.html
+++ b/veterinaria/app/templates/servicios.html
@@ -12,7 +12,7 @@
 <body>
     {% include 'navbar-panel.html' %}
 
-    <main class="container mt-5">
+    <main class="container mt-5 mb-5 p-3">
         <div class="row g-4">
             <!-- Columna izquierda: Formulario crear/editar -->
             <div class="col-12 col-lg-4">
@@ -51,7 +51,6 @@
                                     aria-label="{% if editando %}Actualizar{% else %}Guardar{% endif %}">
                                     <div class="svg-wrapper-1">
                                         <div class="svg-wrapper">
-                                            <!-- nubecita (ok para Guardar) -->
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                 fill="currentColor" class="bi bi-floppy-fill" viewBox="0 0 16 16">
                                                 <path
